--- a/nodeBlogWeb/src/public/index.css
+++ b/nodeBlogWeb/src/public/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+*{margin:0;padding:0}
 #root{
   height: 100%;
   width: 100%;
