--- a/nodeBlogWeb/src/component/admin/admin.css
+++ b/nodeBlogWeb/src/component/admin/admin.css
@@ -16,6 +16,6 @@
 .site-layout .site-layout-background {
     background: #fff;
 }
-.site-layout {
-    height: 100%;
-}
+/*.site-layout {*/
+/*    height: 100%;*/
+/*}*/
