--- a/nodeBlogWeb/src/component/login/index.module.css
+++ b/nodeBlogWeb/src/component/login/index.module.css
@@ -1,10 +1,11 @@
-.whole{
+.whole {
     height: 100%;
     width: 100%;
-    background: #7bffb9;
+
+    /* background: #7bffb9; */
 }
 
-.inputContain{
+.inputContain {
     width: 400px;
     height: 100px;
     display: flex;
@@ -12,14 +13,14 @@
     justify-content: space-around;
 }
 
-.image{
+.image {
     position: absolute;
     top: 7%;
     left: 50%;
     transform: translateX(-100px);
 }
 
-.container{
+.container {
     margin: auto;
     padding-top: 120px;
     height: 100%;
@@ -30,7 +31,7 @@
     align-items: center;
 }
 
-.buttonContain{
+.buttonContain {
     margin-top: 10px;
     width: 400px;
     height: 100px;
@@ -39,7 +40,7 @@
     justify-content: space-around;
 }
 
-.link-item{
+.link-item {
     height: 50px;
     width: 100px;
     color: blue;
