--- a/YangWebBlog/src/scss/animation.scss
+++ b/YangWebBlog/src/scss/animation.scss
@@ -6,3 +6,81 @@
     -webkit-mask-position: 100% 0;
   }
 }
+
+@keyframes ani1 {
+  // @for $var from 0 through 10 {
+  //   #{$var * 10}% {
+  //     clip-path: inset(#{randomNum(200)}px 0 #{randomNum(200)}px 0);
+  //   }
+  // }
+  0%{
+    clip-path: inset(0 0 0 0)
+  }
+  10%{
+    clip-path: inset(71px 0 168px 0)
+  }
+  20%{
+    clip-path: inset(56px 0 144px 0)
+  }
+  30%{
+    clip-path: inset(21px 0 92px 0)
+  }
+  40%{
+    clip-path: inset(25px 0 117px 0)
+  }
+  50%{
+    clip-path: inset(100px 0 83px 0)
+  }
+  60%{
+    clip-path: inset(175px 0 129px 0)
+  }
+  70%{
+    clip-path: inset(165px 0 73px 0)
+  }
+  80%{
+    clip-path: inset(66px 0 65px 0)
+  }
+  90%{
+    clip-path: inset(59px 0 75px 0)
+  }
+  100%{
+    clip-path: inset(2px 0 58px 0)
+  }
+}
+
+@keyframes ani2 {
+  0%{
+    clip-path: inset(0 0 0 0)
+  }
+  10%{
+    clip-path: inset(161px 0 144x 0)
+  }
+  20%{
+    clip-path: inset(131px 0 129px 0)
+  }
+  30%{
+    clip-path: inset(145px 0 77px 0)
+  }
+  40%{
+    clip-path: inset(110px 0 35px 0)
+  }
+  50%{
+    clip-path: inset(174px 0 5px 0)
+  }
+  60%{
+    clip-path: inset(144px 0 114px 0)
+  }
+  70%{
+
+    clip-path: inset(62px 0 52px 0)
+  }
+  80%{
+    clip-path: inset(158px 0 58px 0)
+  }
+  90%{
+    clip-path: inset(26px 0 14px 0)
+  }
+  100%{
+    clip-path: inset(127px 0 84px 0)
+  }
+}
