标题动画调整，下滑按钮样式

--- a/YangWebBlog/src/scss/vue.scss
+++ b/YangWebBlog/src/scss/vue.scss
@@ -1,7 +1,2 @@
-$theme-color: #484c7f;
-$border-color: #eee;
-$gray-color: #949494;
-$red-color: #f56c6c;
-$green-color: #67c23a;
-$orange-color: #f7ba2a;
-$hover-background-color: #ededf2;
+@import "animation";
+@import "theme";
