--- a/YangWebBlog/src/scss/animation.scss
+++ b/YangWebBlog/src/scss/animation.scss
@@ -5,16 +5,16 @@
   to {
     -webkit-mask-position: 100% 0;
   }
-}
+}//首页背景图切换动画
 
 @keyframes ani1 {
-  // @for $var from 0 through 10 {
-  //   #{$var * 10}% {
-  //     clip-path: inset(#{randomNum(200)}px 0 #{randomNum(200)}px 0);
+  //@for $var from 0 through 10 {
+  //     #{$var * 10}% {
+  //       clip-path: inset(#{random(200)}px 0 #{random(200)}px 0);
+  //     }
   //   }
-  // }
   0%{
-    clip-path: inset(0 0 0 0)
+    clip-path: inset(3px 0 6px 0)
   }
   10%{
     clip-path: inset(71px 0 168px 0)
@@ -49,33 +49,37 @@
 }
 
 @keyframes ani2 {
+  //@for $var from 0 through 10 {
+  //  #{$var * 10}% {
+  //    clip-path: inset(#{random(200)}px 0 #{random(200)}px 0);
+  //  }
+  //}
   0%{
-    clip-path: inset(0 0 0 0)
+    clip-path: inset(4px 0 1px 0)
   }
   10%{
-    clip-path: inset(161px 0 144x 0)
+    clip-path: inset(50px 0 144x 0)
   }
   20%{
-    clip-path: inset(131px 0 129px 0)
+    clip-path: inset(93px 0 49px 0)
   }
   30%{
-    clip-path: inset(145px 0 77px 0)
+    clip-path: inset(188px 0 100px 0)
   }
   40%{
-    clip-path: inset(110px 0 35px 0)
+    clip-path: inset(143px 0 35px 0)
   }
   50%{
-    clip-path: inset(174px 0 5px 0)
+    clip-path: inset(71px 0 168px 0)
   }
   60%{
-    clip-path: inset(144px 0 114px 0)
+    clip-path: inset(32px 0 114px 0)
   }
   70%{
-
-    clip-path: inset(62px 0 52px 0)
+    clip-path: inset(100px 0 83px 0)
   }
   80%{
-    clip-path: inset(158px 0 58px 0)
+    clip-path: inset(2px 0 58px 0)
   }
   90%{
     clip-path: inset(26px 0 14px 0)
@@ -84,3 +88,12 @@
     clip-path: inset(127px 0 84px 0)
   }
 }
+
+@keyframes tik {
+  from {
+    transform: translateX(-50%) translateY(-7%);
+  }
+  to {
+    transform: translateX(-50%) translateY(7%);
+  }
+}//首页下滑按钮抖动动画
