菜单,页脚，左中右样式，菜单动态样式

--- a/YangWebBlog/src/scss/theme.scss
+++ b/YangWebBlog/src/scss/theme.scss
@@ -1,6 +1,9 @@
-$theme-color: #484c7f;
+$divider-color: #585a5c;
+
+$theme-color: #efefef;
 $border-color: #eee;
-$gray-color: #949494;
+$grey-color: #313131;
+
 $red-color: #f56c6c;
 $green-color: #67c23a;
 $orange-color: #f7ba2a;
