--- a/YangWebBlog/public/prism.css
+++ b/YangWebBlog/public/prism.css
@@ -33,7 +33,7 @@ pre[class*=language-] {
 }
 
 :not(pre) > code[class*=language-] {
-    padding: .1em;
+    padding: .1em .2em;
     border-radius: .3em;
     white-space: normal
 }
