--- a/YangWebBlog/src/style.css
+++ b/YangWebBlog/src/style.css
@@ -7,10 +7,24 @@
   font-weight: 400;
   font-synthesis: none;
 }
-
-
+/*处理菜单下拉框样式*/
+.el-menu--popup-container.pppp {
+  background-color: #353638 !important;
+  border: none;
+}
+.el-popper.is-pure.is-light.pppp {
+  background: transparent;
+  border: none;
+}
+.el-menu--popup{
+  min-width: 80px !important;
+}
+.el-popper.pppp li{
+  background-color: #353638 !important;
+  width: 70px;
+}
 /* 内外边距通常让各个浏览器样式的表现位置不同 */
-body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
+body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   margin: 0;
   padding: 0;
 }
@@ -76,7 +90,7 @@ del {
   text-decoration: line-through;
 }
 
-address, caption, cite, code, dfn, em, th, var {
+address, caption, cite, dfn, em, th, var {
   font-style: normal;
   font-weight: 400;
 }
@@ -228,8 +242,10 @@ h1, h2, h3, h4, h5, h6 {
 /* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
 .typo h1, .typo h2, .typo h3, .typo h4, .typo h5, .typo h6,
 .typo-h1, .typo-h2, .typo-h3, .typo-h4, .typo-h5, .typo-h6 {
+  text-align: center;
   margin-top: 1.2em;
   margin-bottom: 0.6em;
+  font-weight: 700;
   line-height: 1.35;
 }
 
@@ -324,5 +340,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .typo {
-    font: 300 1em/1.8 PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
+    font: 500 1em/1.8 PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
 }
