--- a/YangWebBlog/src/style.css
+++ b/YangWebBlog/src/style.css
@@ -249,6 +249,15 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.35;
 }
 
+.detail-title h1, .detail-title h2, .detail-title h3, .detail-title h4, .detail-title h5, .detail-title h6,
+.detail-title-h1, .detail-title-h2, .detail-title-h3, .detail-title-h4, .detail-title-h5, .detail-title-h6 {
+  text-align: left;
+  margin-top: 1.2em;
+  margin-bottom: 0.6em;
+  font-weight: 700;
+  line-height: 1.35;
+}
+
 .typo h1, .typo-h1 {
   font-size: 2em;
 }
