--- a/backstageBlog/src/pages/Home/style.scss
+++ b/backstageBlog/src/pages/Home/style.scss
@@ -7,3 +7,10 @@
   .site-layout .site-layout-background {
     background: #fff;
   }
+
+  .header {
+    background: #fff;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
