--- a/backstageBlog/src/pages/Home/style.scss
+++ b/backstageBlog/src/pages/Home/style.scss
@@ -8,6 +8,10 @@
     background: #fff;
   }
 
+  .site-layout {
+    transition: all ease 0.2s;
+  }
+
   .header {
     background: #fff;
     display: flex;
